--- a/index.css
+++ b/index.css
@@ -1,8 +1,22 @@
 .item {
   border: 1px solid green;
   background-color: lightgreen;
+  //width: 50px;
 }
 
 .box {
   display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  /* justify-content: space-between; */
+  /* align-items: flex-end; */
+  /* align-content: center; */
+}
+
+.item1 {
+  /* DISTRIBUTING AVAILABLE SPACE */
+  /* flex: <flex-grow>, <flex-shrink>, <flex-basis> */
+  //flex:    1            0              auto;
+  flex-basis: auto;
+  flex:    0            1              auto;
 }
